2008-06-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ShmemOutputStream.cpp: fix "sizeof" syntax
	problem (exposed on mingw)

	* src/libYARP_OS/src/ShmemInputStream.cpp: fix "sizeof" syntax
	problem (exposed on mingw)

2008-06-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: temporary Bottle-specific
	fix for bug 1982162 ("connection lost between one output and
	two inputs)

2008-06-05  Lorenzo Natale  <nat@liralab.it>
	* src/libYARP_dev/src/RemoteControlBoard.cpp
	* src/libYARP_dev/src/ServerControlBoard.cpp
	* src/libYARP_dev/include/yarp/dev/ControlBoardHelpers.h:
	ServerControlBoard and RemoteControlBoard classes are now
	in separate files. Code is still quite messy, but improving.

	RemoteControlBoard::getEncoders is now non blocking. This prevents
	clients from getting stuck when server dies.
	
2008-05-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/TestFrameGrabber.cpp: added new [grid]
	mode to see boundaries of image more clearly.

	* example/profiling/port_latency_st.cpp: add single threaded
	version of Lorenzo's port latency test.

2008-05-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
	
	* conf/Doxyfile.part: update list of directories searched 
	(math library wasn't included).

2008-05-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/ffmpeg/ffmpeg_api.h: refine version identification.

2008-05-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/BufferedPort.h: catch
	accidental copies of BufferedPort.  Closes bug 1968646.

	* src/libYARP_dev/include/yarp/dev/PolyDriver.h: added private
	copy constructor / assignment operators to catch accidental
	copies.  PolyDriver objects cannot be copied. 
	Closes bug 1968253.

2008-05-19  Lorenzo Natale <nat@liralab.it>
	* src/libYARP_OS/src/Stamp.cpp: Stamp::update() now stores absolute
	time.

2008-05-16  Lorenzo Natale <nat@liralab.it>