@@ -3,6 +3,6 @@
 yarpdevdir = $(includedir)/yarp/dev
 
 # automake_expand yarpdev_HEADERS *.h
-yarpdev_HEADERS = all.h AudioGrabberInterfaces.h AudioVisualInterfaces.h CalibratorInterfaces.h CanBusInterface.h ControlBoardInterfaces.h ControlBoardInterfacesImpl.h ControlBoardPid.h DataSource.h DeviceDriver.h DeviceGroup.h DevicePipe.h Drivers.h FrameGrabberInterfaces.h GenericSensorInterfaces.h GPUInterface.h PolyDriver.h RemoteFrameGrabber.h SerialInterfaces.h ServerFrameGrabber.h ServerInertial.h ServerSerial.h ServerSoundGrabber.h ServiceInterfaces.h TestFrameGrabber.h TestMotor.h 
+yarpdev_HEADERS = all.h AudioGrabberInterfaces.h AudioVisualInterfaces.h CalibratorInterfaces.h CanBusInterface.h ControlBoardHelpers.h ControlBoardInterfaces.h ControlBoardInterfacesImpl.h ControlBoardPid.h DataSource.h DeviceDriver.h DeviceGroup.h DevicePipe.h Drivers.h FrameGrabberInterfaces.h GenericSensorInterfaces.h GPUInterface.h PolyDriver.h RemoteFrameGrabber.h SerialInterfaces.h ServerFrameGrabber.h ServerInertial.h ServerSerial.h ServerSoundGrabber.h ServiceInterfaces.h TestFrameGrabber.h TestMotor.h 
 
 
